--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.grid {
+  display: flex;
+  overflow-x: auto;
+  overflow-y: auto;
+  max-height: 80%;
+  max-width: 80%;
+}
+
+.grid-node {
+  width: 10px;
+  height: 10px;
+  padding: 0.25rem;
+  border: .1px solid gray;
+}
+
